# overleaf-sync-now

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
docs/: architecture.md  authentication.md  operations.md  troubleshooting.md  workflow.mmd
src/overleaf_sync_now/: SKILL.md  __init__.py  cli.py
tests/: test_resolver.py
