[build-system]
# 68+ supports the table-form `license = { text = "MIT" }`. We avoid the
# newer SPDX `license = "MIT"` (PEP 639) form because it requires
# setuptools >= 77, which has no Python 3.8 release on PyPI - and we want
# to keep 3.8 in the support matrix.
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "overleaf-sync-now"
version = "0.3.0"
description = "Stops Claude Code and Codex CLI from silently overwriting Overleaf web edits with a stale local Dropbox copy. PreToolUse hook + CLI + agent skill that probes Overleaf's version history and refreshes local .tex/.bib files before every AI Read/Edit."
readme = "README.md"
# Old-form license metadata. Don't switch to PEP 639 SPDX (`license = "MIT"`
# + `license-files = [...]`) without first dropping Python 3.8 support — see
# the [build-system] note above.
license = { text = "MIT" }
authors = [{ name = "Lu Han", email = "hanlulong@gmail.com" }]
maintainers = [{ name = "OpenEcon.ai" }]
requires-python = ">=3.8"
keywords = [
    # skill-discovery keywords (high-intent search terms in agent ecosystems)
    "overleaf-skill", "claude-skill", "claude-code-skill", "codex-skill",
    "agent-skill", "ai-skill",
    # platform / brand
    "claude-code", "codex", "anthropic", "openai", "mcp",
    # category
    "ai-tools", "ai-agent", "cli",
    # domain
    "overleaf", "latex", "latex-editor", "dropbox", "sync",
    # audience
    "academic-writing", "paper-writing", "scientific-writing",
    "automation", "productivity",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Markup :: LaTeX",
    "Topic :: Utilities",
]
dependencies = [
    "requests>=2.28",
    "browser-cookie3>=0.19",
    # Optional on Linux (uncommon install needs) and on 3.13+ (current rookiepy
    # build still pins PyO3 <= 3.12 transitively). The auth chain degrades
    # gracefully when rookiepy is absent.
    "rookiepy>=0.5; python_version < '3.13' and platform_system != 'Linux'",
    # Bundled (small, ~10MB) so `overleaf-sync-now login` works in uv-managed
    # tool venvs (which ship without pip and so can't lazy-install). The big
    # ~150MB Chromium download is still on-demand at first `login`.
    "playwright>=1.40",
]

[project.urls]
Homepage = "https://github.com/hanlulong/overleaf-sync-now"
Repository = "https://github.com/hanlulong/overleaf-sync-now"
Issues = "https://github.com/hanlulong/overleaf-sync-now/issues"
Author = "https://luhan.io/"
Publisher = "https://openecon.ai/"

[project.scripts]
overleaf-sync-now = "overleaf_sync_now.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
overleaf_sync_now = ["SKILL.md"]
